--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.13",
     "react": "19.1.0",
     "react-native": "0.81.5"
   },
